Fix menubar overflow in `GUI`

--- a/styles/sass/gui.sass
+++ b/styles/sass/gui.sass
@@ -58,7 +58,8 @@ select
 
 #container
     display: flex
-    overflow: auto
+    overflow-x: auto
+    overflow-y: hidden
     flex-direction: row
     flex-wrap: nowrap
     justify-content: space-between
